# fastapi_ml_k8_k6_gh_actions

./: .gitignore  Dockerfile.255lab3  README.md  bld_n_pub_img.sh  check_deps.sh  curl_test.sh  do_exit.sh  ft.sh  gh_actions_run.sh  killk8.sh  load.js  load.js.template  load_e.js  model_pipeline.pkl  poetry_install.sh  post.sh  post1.sh  pyproject.toml  rcc.sh  re-inst-mk.sh  redis-conf  redis_work.py  run.sh  run_k6.sh  run_local_curl.sh  run_no_tnl.sh  run_on_remote_server.sh  run_on_remote_server_20230916.sh  run_redis.sh  run_sd.sh  run_test.sh  run_tests.sh  setup_deps.sh  setup_values.py  start_mk.sh  td.sh  utility.py  vp.sh
infra/: apply_deployments.sh  apply_deployments_gh_actions.sh  daf.sh  delete_deployments.sh  deployment-pythonapi-consumer.yaml  deployment-pythonapi.yaml  deployment-redis.yaml  istio-gateway-prediction.yaml  namespace.yaml  port_forward.sh  prediction-grafana.yaml  service-prediction-consumer.yaml  service-prediction.yaml  service-prediction_a.yaml  service-redis.yaml  telemetry.yaml
lab3/: main.py  run.sh
tests/: run_tests.sh  test_lab3.py
trainer/: curl_commands.txt  model_pipeline.pkl  train.py  train1.py
web_consumer/: .gitignore  Dockerfile.api_consumer  api_tester.ipynb  app.py  av.sh  build_and_run_docker.sh  build_docker.sh  consume_fastapi.py  cti.sh  env.sh  forms.py  heroku_notes.txt  includes.py  jn_run.sh  jupyter.sh  publish_docker_image.sh  publish_docker_image_x86.sh  purgepull.sh  pyvenv.cfg  r_ubut_container.sh  rd.sh  rendering_path_notes.txt  requirements.txt  requirements_ming.txt  rf.sh  rm_docker_images.sh  (+7 more)
(+47 files in other folders)
