[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["tuneman7 <tuneman7@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
requests = "^2.27.1"
joblib = "^1.1.0"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
redis = "^4.3.3"
DateTime = "^4.4"




[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
